layoutMain_createProject_getAllProjectManagement

--- a/public/index.html
+++ b/public/index.html
@@ -23,6 +23,9 @@
   <title>React App</title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous" />
+
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" />
+  <!-- Tiny cloud -->
 </head>
 
 <body>
@@ -47,6 +50,13 @@
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
     integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
     crossorigin="anonymous"></script>
+  <script src="https://cdn.tiny.cloud/1/46359qvn85x63ph8vu84bb5i608ivetbk5bf7p0c7yartwv6/tinymce/6/tinymce.min.js"
+    referrerpolicy="origin"></script>
+  <!-- <script src="https://cdn.tiny.cloud/1/no-api-key/tinymce/6/tinymce.min.js" referrerpolicy="origin"></script> -->
+
+  <!-- <script>
+    tinymce.init({ selector: "textarea" });
+  </script> -->
 </body>
 
 </html>
